FK-8 publish orgUnits to kafka