@@ -4,23 +4,27 @@ import lombok.extern.slf4j.Slf4j;
 import no.fint.model.resource.administrasjon.organisasjon.OrganisasjonselementResource;
 import no.fintlabs.cache.FintCache;
 import no.fintlabs.links.ResourceLinkUtil;
-import no.fintlabs.orgUnit.OrgUnit;
 import org.springframework.stereotype.Service;
 
 import java.util.List;
+import java.util.stream.Collectors;
 
 @Slf4j
 @Service
 public class OrgUnitService {
     private final FintCache<String, OrganisasjonselementResource> organisasjonselementResourceCache;
+    private final OrgUnitEntityProducerService orgUnitEntityProducerService;
 
-    public OrgUnitService(FintCache<String, OrganisasjonselementResource> organisasjonselementResourceCache) {
+    public OrgUnitService(
+            FintCache<String, OrganisasjonselementResource> organisasjonselementResourceCache,
+            OrgUnitEntityProducerService orgUnitEntityProducerService) {
         this.organisasjonselementResourceCache = organisasjonselementResourceCache;
+        this.orgUnitEntityProducerService = orgUnitEntityProducerService;
     }
 
 
     public OrgUnit create(OrganisasjonselementResource organisasjonselementResource){
-        return OrgUnit
+        OrgUnit newOrUpdatedOrgunit = OrgUnit
                 .builder()
                 .resourceId(ResourceLinkUtil.getFirstSelfLink(organisasjonselementResource))
                 .organisationUnitId(organisasjonselementResource.getOrganisasjonsId().getIdentifikatorverdi())
@@ -32,6 +36,8 @@ public class OrgUnitService {
                 .childrenRef(getChildrenOrgUnitResourceOrganisasjonsId(organisasjonselementResource))
                 .managerRef(organisasjonselementResource.getLeder().toString())
                 .build();
+        orgUnitEntityProducerService.publish(newOrUpdatedOrgunit);
+        return newOrUpdatedOrgunit;
     }
 
 
@@ -39,13 +45,15 @@ public class OrgUnitService {
             OrganisasjonselementResource organisasjonselementResource) {
         String orgUnitSelfLinkHref = ResourceLinkUtil.getFirstSelfLink(organisasjonselementResource);
 
-        return organisasjonselementResourceCache.get(ResourceLinkUtil.systemIdToLowerCase(orgUnitSelfLinkHref))
+        List<String> subOrgUnitList = organisasjonselementResourceCache.get(ResourceLinkUtil.organisasjonsIdToLowerCase(orgUnitSelfLinkHref))
                 .getUnderordnet()
                 .stream()
                 .map(selfLink -> selfLink.getHref())
-                .map(href -> organisasjonselementResourceCache.getOptional(ResourceLinkUtil.systemIdToLowerCase(href)))
-                .map(childOrgUnit -> childOrgUnit.get().getOrganisasjonsId().getIdentifikatorverdi())
-                .toList();
+                .map(href -> organisasjonselementResourceCache.get(ResourceLinkUtil.organisasjonsIdToLowerCase(href)))
+                .map(childOrgUnit -> childOrgUnit.getOrganisasjonsId().getIdentifikatorverdi())
+                .collect(Collectors.toList());
+
+        return subOrgUnitList;
     }
 
 
